--- a/adminPortal/invoice.html
+++ b/adminPortal/invoice.html
@@ -8,6 +8,7 @@
             type="text/css"
         />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
+        <link rel="stylesheet" href="./css/invoice.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -24,7 +25,7 @@
             <div class="invoice-container">
                 <div class="invoice-wrapper">
                     <div class="invoice-header">
-                        <div class="invoice-header-left">
+                        <div class="invoice-header-left f-l">
                             <h3>KINEMATIC FOODTECH PPRIVATE LIMITED</h3>
                             <div class="desc">
                                 <p>
@@ -44,7 +45,7 @@
                                 <a href="#">www.sprink.online</a>
                             </div>
                         </div>
-                        <div class="invoice-header-right">
+                        <div class="invoice-header-right f-l">
                             <div class="logo">
                                 <img
                                     src="./images/logo.png"
@@ -57,9 +58,10 @@
                             </div>
                             <div class="label">SALES INVOICE</div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="invoice-top">
-                        <div class="invoice-top-left">
+                        <div class="invoice-top-left f-l">
                             <h3>INVOICE TO</h3>
                             <p>Rajashri Grandhim Foundation</p>
                             <p>
@@ -71,121 +73,153 @@
                             <p></p>
                             <p>GSTIN: 29AAUFR0052PIZG</p>
                         </div>
-                        <div class="invoice-top-right">
+                        <div class="invoice-top-right f-l">
                             <div class="right-table">
-                                <div class="right-table-left">INVOICE NO.</div>
-                                <div class="right-table-right">1602</div>
+                                <div class="right-table-left f-l">
+                                    INVOICE NO.
+                                </div>
+                                <div class="right-table-right f-l">1602</div>
+                                <div class="clr"></div>
                             </div>
                             <div class="right-table">
-                                <div class="right-table-left">
+                                <div class="right-table-left f-l">
                                     DATE 02/03/2021
                                 </div>
-                                <div class="right-table-right">
+                                <div class="right-table-right f-l">
                                     DUE DATE 02/03/2021
                                 </div>
+                                <div class="clr"></div>
                             </div>
                             <div class="right-table">
-                                <div class="right-table-left">TERMS</div>
-                                <div class="right-table-right">CASH</div>
+                                <div class="right-table-left f-l">TERMS</div>
+                                <div class="right-table-right f-l">CASH</div>
+                                <div class="clr"></div>
                             </div>
                         </div>
+                        <div class="clr"></div>
                     </div>
+                    <div class="clr"></div>
                     <div class="invoice-mid">
                         <div class="head-info">
                             <h3>PLACE OF SUPPLY 29 - Karnataka</h3>
                         </div>
                         <div class="table-info">
                             <div class="header invoice-item">
-                                <div class="sno">No</div>
-                                <div class="hsn">HSN/SAC</div>
-                                <div class="product">PRODUCT</div>
-                                <div class="quantity">QUANTITY</div>
-                                <div class="rate">RATE</div>
-                                <div class="tax">TAX</div>
-                                <div class="amount"></div>
+                                <div class="sno f-l i-i">No</div>
+                                <div class="hsn f-l i-i">HSN/SAC</div>
+                                <div class="product f-l i-i">PRODUCT</div>
+                                <div class="quantity f-l i-i">QUANTITY</div>
+                                <div class="rate f-l i-i">RATE</div>
+                                <div class="tax f-l i-i">TAX</div>
+                                <div class="amount f-l i-i">AMOUNT</div>
+                                <div class="clr"></div>
                             </div>
                             <div class="invoice-item">
-                                <div class="sno">1</div>
-                                <div class="hsn">9963</div>
-                                <div class="product">
+                                <div class="sno f-l i-i">1</div>
+                                <div class="hsn f-l i-i">9963</div>
+                                <div class="product f-l i-i">
                                     Lunch-Standard South Indian Veg Full
                                 </div>
-                                <div class="quantity">1</div>
-                                <div class="rate">110</div>
-                                <div class="tax">5.0% GST</div>
-                                <div class="amount">110.00</div>
+                                <div class="quantity f-l i-i">1</div>
+                                <div class="rate f-l i-i">110</div>
+                                <div class="tax f-l i-i">5.0% GST</div>
+                                <div class="amount f-l i-i">110.00</div>
+                                <div class="clr"></div>
                             </div>
                         </div>
+                        <div class="clr"></div>
                         <div class="total-wrap">
-                            <div class="total left">
+                            <div class="total left f-l">
                                 <p>
                                     Thank you for your business and have a great
                                     day!
                                 </p>
                             </div>
-                            <div class="total right">
+                            <div class="total right f-l">
                                 <div class="line-item">
-                                    <div class="line-desc">
+                                    <div class="line-desc f-l">
                                         TOTAL BEFORE TAX
                                     </div>
-                                    <div class="line-total">220.00</div>
+                                    <div class="line-total f-l">220.00</div>
+                                    <div class="clr"></div>
                                 </div>
                                 <div class="line-item">
-                                    <div class="line-desc">( - ) DISCOUNT</div>
-                                    <div class="line-total"></div>
+                                    <div class="line-desc f-l">
+                                        ( - ) DISCOUNT
+                                    </div>
+                                    <div class="line-total f-l"></div>
+                                    <div class="clr"></div>
                                 </div>
                                 <div class="line-item">
-                                    <div class="line-desc">
+                                    <div class="line-desc f-l">
                                         ( + ) CGST @ 2.5%
                                     </div>
-                                    <div class="line-total">5.50</div>
+                                    <div class="line-total f-l">5.50</div>
+                                    <div class="clr"></div>
                                 </div>
                                 <div class="line-item">
-                                    <div class="line-desc">
+                                    <div class="line-desc f-l">
                                         ( + ) SGST @ 2.5%
                                     </div>
-                                    <div class="line-total">5.50</div>
+                                    <div class="line-total f-l">5.50</div>
+                                    <div class="clr"></div>
+                                </div>
+                                <div class="line-item">
+                                    <div class="line-desc f-l">
+                                        TOTAL AFTER TAX
+                                    </div>
+                                    <div class="line-total f-l">231.00</div>
+                                    <div class="clr"></div>
                                 </div>
                                 <div class="line-item bg">
-                                    <div class="line-desc">TOTAL AFTER TAX</div>
-                                    <div class="line-total">231.00</div>
+                                    <div class="line-desc f-l">
+                                        TOTAL AMOUNT DUE
+                                    </div>
+                                    <div class="line-total f-l">231.00</div>
+                                    <div class="clr"></div>
                                 </div>
                             </div>
+                            <div class="clr"></div>
                         </div>
                     </div>
+                    <div class="clr"></div>
                     <div class="invoice-down">
                         <div class="invoice-down-wrapper">
-                            <div class="invoice-down-left">
+                            <div class="invoice-down-left f-l">
                                 <div class="invoice-bank-wrap">
                                     <h3>Please remit funds to</h3>
                                     <div class="table">
-                                        <div class="item-left">
+                                        <div class="item-left f-l">
                                             Bank Account Name
                                         </div>
-                                        <div class="item-right">
+                                        <div class="item-right f-l">
                                             KINEMATIC FOODTECH PRIVATE LIMITED
                                         </div>
+                                        <div class="clr"></div>
                                     </div>
                                     <div class="table">
-                                        <div class="item-left">
+                                        <div class="item-left f-l">
                                             Bank Account No.
                                         </div>
-                                        <div class="item-right">
+                                        <div class="item-right f-l">
                                             9160 2007 929 6427
                                         </div>
+                                        <div class="clr"></div>
                                     </div>
                                     <div class="table">
-                                        <div class="item-left">IFSC.</div>
-                                        <div class="item-right">
+                                        <div class="item-left f-l">IFSC.</div>
+                                        <div class="item-right f-l">
                                             UTIB0000677
                                         </div>
+                                        <div class="clr"></div>
                                     </div>
                                     <div class="table">
-                                        <div class="item-left">BANK</div>
-                                        <div class="item-right">
+                                        <div class="item-left f-l">BANK</div>
+                                        <div class="item-right f-l">
                                             AXIS BANK, ELECTRONIC CITY,
                                             BANGALORE - 560100
                                         </div>
+                                        <div class="clr"></div>
                                     </div>
                                 </div>
                                 <div class="sign-wrap">
@@ -193,11 +227,28 @@
                                     <p>Authorised Signatory</p>
                                 </div>
                             </div>
-                            <div class="invoice-down-right"></div>
+                            <div class="invoice-down-right f-l">
+                                <div class="invoice-down-in upi">
+                                    <img
+                                        src="./images/bhim-upi.png"
+                                        class="img-responsive img"
+                                        alt=""
+                                    />
+                                </div>
+                                <div class="invoice-down-in qr">
+                                    <img
+                                        src="./images/qr-code.png"
+                                        class="img-responsive img"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="clr"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <footer></footer>
     </body>
 </html>
