--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -179,12 +179,14 @@
                             >
                                 <div
                                     class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4"
+                                    data-name="tile1"
                                 >
                                     <h3>Office 1</h3>
                                     <p>bagmane tech park</p>
                                 </div>
                                 <div
                                     class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4"
+                                    data-name="tile2"
                                 >
                                     <h3>Office 2</h3>
                                     <p>bagmane tech park</p>
@@ -207,7 +209,7 @@
                         <div class="upcoming-orders">
                             <h3>Upcoming Orders</h3>
                             <div class="order-wrap">
-                                <div class="order">
+                                <div class="order-header">
                                     <div class="header top">
                                         <div class="f-l dish-name">
                                             Dish Name
@@ -219,7 +221,7 @@
                                         <div class="clr"></div>
                                     </div>
                                 </div>
-                                <div class="order">
+                                <div class="order tile1">
                                     <div class="odd">
                                         <div class="f-l dish-name">
                                             <input
@@ -255,7 +257,7 @@
 
                                     <div class="clr"></div>
                                 </div>
-                                <div class="order">
+                                <div class="order tile2">
                                     <div class="even">
                                         <div class="f-l dish-name">
                                             <input
