b2b mobile view changes

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -52,7 +52,36 @@
                     <div class="user-wrapper">
                         <p>Welcome Test User</p>
                     </div>
-                    <ul class="items">
+                    <div class="selected-value mobile-only">Add Users</div>
+                    <ul class="items mobile-only">
+                        <li>
+                            <a
+                                href="#"
+                                class="nav-menu-side active"
+                                name="addUser"
+                                >Add Users</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#" class="nav-menu-side" name="analytics"
+                                >Analytics</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#" class="nav-menu-side" name="ordering"
+                                >Ordering</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="nav-menu-side"
+                                name="approveUsers"
+                                >Approve Users</a
+                            >
+                        </li>
+                    </ul>
+                    <ul class="items desktop-only">
                         <li>
                             <a
                                 href="#"
