b2b mobile -view changes step-1 completed

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -52,7 +52,15 @@
                     <div class="user-wrapper">
                         <p>Welcome Test User</p>
                     </div>
-                    <div class="selected-value mobile-only">Add Users</div>
+                    <div class="selected-value mobile-only">
+                        Add Users
+                        <div class="hamburger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div class="clr"></div>
+                    </div>
                     <ul class="items mobile-only">
                         <li>
                             <a
@@ -124,6 +132,7 @@
                                     name="uploadFile"
                                     value="Upload"
                                 />
+                                <p>Drag and drop file to Upload</p>
                             </div>
                         </div>
                         <div class="step">
@@ -138,6 +147,7 @@
                                 </div>
                                 <div class="add-user">
                                     <div class="item f-l">
+                                        <label>Name</label>
                                         <input
                                             type="text"
                                             name="user-name"
@@ -147,6 +157,7 @@
                                         />
                                     </div>
                                     <div class="item f-l">
+                                        <label>Email</label>
                                         <input
                                             type="email"
                                             name="user-email"
@@ -156,6 +167,7 @@
                                         />
                                     </div>
                                     <div class="item f-l">
+                                        <label>Mobile</label>
                                         <input
                                             type="text"
                                             name="user-mobile"
