--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -53,7 +53,7 @@
                         <p>Welcome Test User</p>
                     </div>
                     <div class="selected-value mobile-only">
-                        Add Users
+                        <div class="value">Add Users</div>
                         <div class="hamburger">
                             <span></span>
                             <span></span>
