--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -402,12 +402,21 @@
                                 <div class="clr"></div>
                             </div>
                             <div class="approve-item">
-                                <div class="item f-l">Test</div>
-                                <div class="item f-l">Test</div>
-                                <div class="item f-l">Test</div>
-                                <div class="item f-l">Test</div>
+                                <div class="item f-l">
+                                    <label>Name</label>Test
+                                </div>
+                                <div class="item f-l">
+                                    <label>Email</label>Test
+                                </div>
+                                <div class="item f-l">
+                                    <label>Phone</label>Test
+                                </div>
+                                <div class="item f-l">
+                                    <label>Office</label>Test
+                                </div>
                                 <div class="item-ch f-l">
-                                    <input type="checkbox" />
+                                    <label>Approve</label
+                                    ><input type="checkbox" />
                                 </div>
                                 <div class="item-bt f-l">
                                     <button
