dashboard mobile view step 3

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -265,6 +265,7 @@
                                 <div class="order tile1">
                                     <div class="odd">
                                         <div class="f-l dish-name">
+                                            <label>Meal Name</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -274,6 +275,7 @@
                                             <p>20/3/2021 - Lunch</p>
                                         </div>
                                         <div class="f-l quantity">
+                                            <label>Quantity</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -301,6 +303,7 @@
                                 <div class="order tile2">
                                     <div class="even">
                                         <div class="f-l dish-name">
+                                            <label>Meal Name</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -310,6 +313,7 @@
                                             <p>20/3/2021 - Lunch</p>
                                         </div>
                                         <div class="f-l quantity">
+                                            <label>Quantity</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -350,9 +354,12 @@
                             </div>
                             <div class="new-order-wrap">
                                 <div class="date f-l">
+                                    <label>Date</label>
                                     <input type="date" />
                                 </div>
                                 <div class="plan f-l">
+                                    <label>Plan</label>
+
                                     <input
                                         type="text"
                                         class="f-input-small"
@@ -360,6 +367,8 @@
                                     />
                                 </div>
                                 <div class="quantity f-l">
+                                    <label>Quantity</label>
+
                                     <input
                                         type="text"
                                         class="f-input-small"
@@ -367,6 +376,8 @@
                                     />
                                 </div>
                                 <div class="office-wrap f-l">
+                                    <label>Location</label>
+
                                     <select class="small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
