integrated datepicker for date

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -7,6 +7,11 @@
             href="./vendor/css/bootstrap.min.css"
             type="text/css"
         />
+        <link
+            rel="stylesheet"
+            href="./vendor/css/jqueryUi.css"
+            type="text/css"
+        />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link
             rel="icon"
@@ -19,6 +24,7 @@
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
         <script type="text/javascript" src="./vendor/js/chart.min.js"></script>
         <script type="text/javascript" src="./vendor/js/chart.esm.js"></script>
+        <script type="text/javascript" src="./vendor/js/jqueryUi.js"></script>
         <script
             type="text/javascript"
             src="./vendor/js/helpers.esm.min.js"
@@ -355,7 +361,7 @@
                             <div class="new-order-wrap">
                                 <div class="date f-l">
                                     <label>Date</label>
-                                    <input type="date" />
+                                    <input type="text" class="datepicker" />
                                 </div>
                                 <div class="plan f-l">
                                     <label>Plan</label>
