added glyphicons table style changes

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -271,7 +271,6 @@
                                 <div class="order tile1">
                                     <div class="odd">
                                         <div class="f-l dish-name">
-                                            <label>Meal Name</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -281,7 +280,6 @@
                                             <p>20/3/2021 - Lunch</p>
                                         </div>
                                         <div class="f-l quantity">
-                                            <label>Quantity</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -293,12 +291,16 @@
                                             <button
                                                 class="small-button edit-order-meals success"
                                             >
-                                                Edit
+                                                <span
+                                                    class="glyphicon glyphicon-edit"
+                                                ></span>
                                             </button>
                                             <button
                                                 class="small-button delete-order-meals failure"
                                             >
-                                                Delete
+                                                <span
+                                                    class="glyphicon glyphicon-trash"
+                                                ></span>
                                             </button>
                                         </div>
                                         <div class="clr"></div>
@@ -309,7 +311,6 @@
                                 <div class="order tile2">
                                     <div class="even">
                                         <div class="f-l dish-name">
-                                            <label>Meal Name</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -319,7 +320,6 @@
                                             <p>20/3/2021 - Lunch</p>
                                         </div>
                                         <div class="f-l quantity">
-                                            <label>Quantity</label>
                                             <input
                                                 type="text"
                                                 class="f-input-small show-only"
@@ -331,12 +331,16 @@
                                             <button
                                                 class="small-button edit-order-meals success"
                                             >
-                                                Edit
+                                                <span
+                                                    class="glyphicon glyphicon-edit"
+                                                ></span>
                                             </button>
                                             <button
                                                 class="small-button delete-order-meals failure"
                                             >
-                                                Delete
+                                                <span
+                                                    class="glyphicon glyphicon-trash"
+                                                ></span>
                                             </button>
                                         </div>
                                         <div class="clr"></div>
