--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -364,12 +364,9 @@
                             </div>
                             <div class="new-order-wrap">
                                 <div class="date f-l">
-                                    <label>Date</label>
                                     <input type="text" class="datepicker" />
                                 </div>
                                 <div class="plan f-l">
-                                    <label>Plan</label>
-
                                     <input
                                         type="text"
                                         class="f-input-small"
@@ -377,8 +374,6 @@
                                     />
                                 </div>
                                 <div class="quantity f-l">
-                                    <label>Quantity</label>
-
                                     <input
                                         type="text"
                                         class="f-input-small"
@@ -386,8 +381,6 @@
                                     />
                                 </div>
                                 <div class="office-wrap f-l">
-                                    <label>Location</label>
-
                                     <select class="small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
@@ -397,7 +390,9 @@
                                 </div>
                                 <div class="action f-l">
                                     <button class="small-button">
-                                        Add to Order
+                                        <span
+                                            class="glyphicon glyphicon-plus"
+                                        ></span>
                                     </button>
                                 </div>
                                 <div class="clr"></div>
