added updated styles

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -418,28 +418,21 @@
                                 <div class="clr"></div>
                             </div>
                             <div class="approve-item">
-                                <div class="item f-l">
-                                    <label>Name</label>Test
-                                </div>
-                                <div class="item f-l">
-                                    <label>Email</label>Test
-                                </div>
-                                <div class="item f-l">
-                                    <label>Phone</label>Test
-                                </div>
-                                <div class="item f-l">
-                                    <label>Office</label>Test
-                                </div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
                                 <div class="item-ch f-l">
-                                    <label>Approve</label
-                                    ><input type="checkbox" />
+                                    <input type="checkbox" />
                                 </div>
                                 <div class="item-bt f-l">
                                     <button
                                         class="small-button approve-user-button"
                                         data-user="{}"
                                     >
-                                        Approve
+                                        <span
+                                            class="glyphicon glyphicon-ok"
+                                        ></span>
                                     </button>
                                 </div>
                                 <div class="clr"></div>
