analytics page mobile view

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -193,6 +193,25 @@
                     </div>
                     <div class="dashboard-step-2 d-s analytics-wrap">
                         <div class="analytics-main-wrap">
+                            <div class="analytics-tiles-wrap">
+                                <div class="tile-an f-l">
+                                    <h3>12000 Lunch</h3>
+                                    <p>last month</p>
+                                </div>
+                                <div class="tile-an f-l">
+                                    <h3>2 Lakh</h3>
+                                    <p>last invoice</p>
+                                </div>
+                                <div class="tile-an f-l">
+                                    <h3>1.5 Lakh</h3>
+                                    <p>month till date</p>
+                                </div>
+                                <div class="tile-an f-l">
+                                    <h3>200 Meals</h3>
+                                    <p>today</p>
+                                </div>
+                                <div class="clr"></div>
+                            </div>
                             <div class="chart-container">
                                 <canvas
                                     id="billingChart"
