--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -373,51 +373,53 @@
                             <div class="new-order-act">
                                 <button class="med-button">New Order</button>
                             </div>
-                            <div class="new-order-header">
-                                <div class="date f-l">Date</div>
-                                <div class="plan f-l">Plan</div>
-                                <div class="quantity f-l">Quantity</div>
-                                <div class="office-wrap f-l">Office</div>
-                                <div class="action f-l">Action</div>
-                                <div class="clr"></div>
-                            </div>
-                            <div class="new-order-wrap">
-                                <div class="date f-l">
-                                    <input type="text" class="datepicker" />
+                            <div class="new-order-container">
+                                <div class="new-order-header">
+                                    <div class="date f-l">Date</div>
+                                    <div class="plan f-l">Plan</div>
+                                    <div class="quantity f-l">Quantity</div>
+                                    <div class="office-wrap f-l">Office</div>
+                                    <div class="action f-l">Action</div>
+                                    <div class="clr"></div>
                                 </div>
-                                <div class="plan f-l">
-                                    <input
-                                        type="text"
-                                        class="f-input-small"
-                                        placeholder="Plan"
-                                    />
+                                <div class="new-order-wrap">
+                                    <div class="date f-l">
+                                        <input type="text" class="datepicker" />
+                                    </div>
+                                    <div class="plan f-l">
+                                        <input
+                                            type="text"
+                                            class="f-input-small"
+                                            placeholder="Plan"
+                                        />
+                                    </div>
+                                    <div class="quantity f-l">
+                                        <input
+                                            type="text"
+                                            class="f-input-small"
+                                            placeholder="Quantity"
+                                        />
+                                    </div>
+                                    <div class="office-wrap f-l">
+                                        <select class="small-select">
+                                            <option>BTM</option>
+                                            <option>BTM</option>
+                                            <option>BTM</option>
+                                            <option>BTM</option>
+                                        </select>
+                                    </div>
+                                    <div class="action f-l">
+                                        <button class="small-button">
+                                            <span
+                                                class="glyphicon glyphicon-plus"
+                                            ></span>
+                                        </button>
+                                    </div>
+                                    <div class="clr"></div>
                                 </div>
-                                <div class="quantity f-l">
-                                    <input
-                                        type="text"
-                                        class="f-input-small"
-                                        placeholder="Quantity"
-                                    />
-                                </div>
-                                <div class="office-wrap f-l">
-                                    <select class="small-select">
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                    </select>
-                                </div>
-                                <div class="action f-l">
-                                    <button class="small-button">
-                                        <span
-                                            class="glyphicon glyphicon-plus"
-                                        ></span>
-                                    </button>
-                                </div>
-                                <div class="clr"></div>
-                            </div>
 
-                            <div class="clr"></div>
+                                <div class="clr"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="dashboard-step-4 d-s approve-users-wrap">
